--- a/roles/cart/templates/cart.service.j2
+++ b/roles/cart/templates/cart.service.j2
@@ -2,8 +2,8 @@
 Description = Cart Service
 [Service]
 User=roboshop
-Environment=REDIS_HOST={{REDIS_HOST}}
-Environment=CATALOGUE_HOST={{CATALOGUE_HOST}}
+Environment=REDIS_HOST={{REDIS_HOST}}.gonepudirobot.online
+Environment=CATALOGUE_HOST={{CATALOGUE_HOST}}.gonepudirobot.online
 Environment=CATALOGUE_PORT=8080
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=cart
