--- a/roles/user/templates/user.service.j2
+++ b/roles/user/templates/user.service.j2
@@ -1,12 +1,12 @@
 [Unit]
-Description = Cart Service
+Description = User Service
 [Service]
 User=roboshop
+Environment=MONGO=true
 Environment=REDIS_HOST={{REDIS_HOST}}
-Environment=CATALOGUE_HOST={{CATALOGUE_HOST}}
-Environment=CATALOGUE_PORT=8080
+Environment=MONGO_URL="mongodb://{{MONGODB_HOST}}:27017/users"
 ExecStart=/bin/node /app/server.js
-SyslogIdentifier=cart
+SyslogIdentifier=user
 
 [Install]
 WantedBy=multi-user.target
