--- a/roles/web/templates/roboshop.conf.j2
+++ b/roles/web/templates/roboshop.conf.j2
@@ -1,30 +1,14 @@
 proxy_http_version 1.1;
-
 location /images/ {
   expires 5s;
   root   /usr/share/nginx/html;
   try_files $uri /images/placeholder.jpg;
 }
-
-location /api/catalogue/ {
-  proxy_pass http://{{CATALOGUE_HOST}}:8080/;
-}
-
-location /api/user/ {
-  proxy_pass http://{{USER_HOST}}:8080/;
-}
-
-location /api/cart/ {
-  proxy_pass http://{{CART_HOST}}:8080/;
-}
-
-location /api/shipping/ {
-  proxy_pass http://{{SHIPPING_HOST}}:8080/;
-}
-
-location /api/payment/ {
-  proxy_pass http://{{PAYMENT_HOST}}:8080/;
-}
+location /api/catalogue/ { proxy_pass http://catalogue.gonepudirobot.online:8080/; }
+location /api/user/ { proxy_pass http://user.gonepudirobot.online:8080/; }
+location /api/cart/ { proxy_pass http://cart.gonepudirobot.online:8080/; }
+location /api/shipping/ { proxy_pass http://shipping.gonepudirobot.online:8080/; }
+location /api/payment/ { proxy_pass http://payment.gonepudirobot.online:8080/; }
 
 location /health {
   stub_status on;
